# TileViewer

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Readme.md
.github/workflows/: build_linux.yml  build_win.yml
asset/icon/: icon.rc
asset/plugin/: 9nine_fnt_switch.lua  baranoki_fnt_psp.lua  bmp.lua  hatsuyuki_fnt_psv.lua  iwaihime_xtx.lua  narcissus_lbg_psp.lua  plugin_png.c  util_bmp.lua  util_png.c  util_stb.c  yomawari3_nltx_switch.lua
asset/plugin/luacapi/: tileviewer_extra.lua
asset/plugin/lualib/: util_declear.lua
asset/sample/: ZI24.FNT  ZI24_plugincfg.json  c005.spc.dec
plugin/: 9nine_fnt_switch.lua  baranoki_fnt_psp.lua  hatsuyuki_fnt_psv.lua  konosuba_gof_psv.lua  util_stb.c  util_tm2.lua
plugin/luacapi/: tileviewer_basic.lua
script/: Dockerfile  build_docker.sh  build_linux.sh  build_macos.sh  build_mingw.sh  fetch_depend.sh
script/patch/: lua.cmake
src/: core.hpp  core_app.cpp  core_app.hpp  core_decode.c  core_decode.h  core_plugin.c  core_plugin.h  core_solver.cpp  core_type.h  plugin.h  plugin_builtin.c  plugin_lua.c  plugin_luaex.cpp  ui.hpp  ui_config.cpp  ui_menu.cpp  ui_tile.cpp  ui_top.cpp
